fix pagebreak inside

--- a/Src/src/css/print.css
+++ b/Src/src/css/print.css
@@ -205,6 +205,7 @@ footer {
 .programma-entry {
   margin-bottom: 1rem;
   background-color: white;
+  page-break-inside: avoid;
 }
 
 .programma-entry img {
@@ -388,6 +389,7 @@ div#shop
   width: 100%;
   min-height: 300px;
   background-color: white;
+  page-break-inside: avoid;
 }
 
 .product-image {
